[package]
name = "sdl2Test"
version = "0.1.0"
authors = ["kletska <kletska.epa@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sdl2]
version = "0.34.2"
default-features = false
features = ["gfx"]
